<resources>
    <!-- App Info -->
    <string name="app_name">MV11</string>
    <string name="mapbox_access_token">pk.eyJ1IjoibnV0ZWxhazEyMyIsImEiOiJjbWd4cWEzMHcxNjBjMmtzOGdxMXU2OGhyIn0.0yvA2-zQu--1RvXr3C7c2w</string>
    
    <!-- Intro Fragment -->
    <string name="intro_title">Vitajte v aplikácii</string>
    <string name="btn_login">Prihlásenie</string>
    <string name="btn_signup">Registrácia</string>
    <string name="btn_map">Mapa</string>
    <string name="btn_users">Užívatelia</string>
    <string name="btn_profile">Profil</string>
    
    <!-- Login Fragment -->
    <string name="login_title">Vitajte v Appke</string>
    <string name="login_subtitle">Prihláste sa do svojho účtu</string>
    <string name="hint_email">Meno alebo email</string>
    <string name="hint_password">Heslo</string>
    <string name="forgot_password">Zabudli ste heslo?</string>
    <string name="btn_login_submit">Prihlásiť sa</string>
    <string name="no_account">Nemáte účet?</string>
    <string name="signup_link">Zaregistrujte sa</string>
    <string name="toast_enter_email">Zadajte meno alebo email</string>
    <string name="toast_enter_password">Zadajte heslo</string>
    <string name="toast_enter_email_for_reset">Zadajte email pre obnovenie hesla</string>
    <string name="toast_login_success">Prihlásenie úspešné!</string>
    <string name="toast_forgot_not_implemented">Funkcia \'Zabudol som heslo\' ešte nie je implementovaná</string>
    <string name="error_login_wrong_credentials">Meno alebo heslo je nesprávne</string>
    
    <!-- Signup Fragment -->
    <string name="signup_title">Registrácia</string>
    <string name="label_name">Meno:</string>
    <string name="label_email">Email:</string>
    <string name="hint_name">Vaše meno</string>
    <string name="hint_email_placeholder">vas@email.com</string>
    <string name="btn_register">Zaregistrovať sa</string>
    <string name="have_account">Už mám účet?</string>
    <string name="login_link">Prihlásiť sa</string>
    <string name="registration_success">Registrácia úspešná!</string>
    <string name="error_username_exists">Používateľské meno už existuje. Vyberte si iné používateľské meno.</string>
    <string name="error_email_exists">Email už existuje. Vyberte si iný email.</string>
    
    <!-- Profile Fragment -->
    <string name="profile_title">Profil používateľa</string>
    <string name="profile_subtitle">Vaše osobné údaje</string>
    <string name="label_name_profile">Meno:</string>
    <string name="label_email_profile">Email:</string>
    <string name="label_uid">UID:</string>
    <string name="label_location_sharing">Zdieľanie polohy</string>
    <string name="label_auto_location_update">Automatická aktualizácia polohy</string>
    <string name="label_auto_location_update_toggle">Aktualizovať geofence každých 30 minút</string>
    <string name="btn_logout">Odhlásiť sa</string>
    <string name="btn_login_profile">Prihlásiť sa</string>
    <string name="btn_register_profile">Zaregistrovať sa</string>
    <string name="no_user_logged_in">Nie ste prihlásený</string>
    <string name="logout_success">Odhlásenie úspešné</string>
    <string name="logout_error">Chyba pri odhlásení</string>
    <string name="profile_not_logged_in_title">Nie ste prihlásený</string>
    <string name="profile_not_logged_in_subtitle">Pre zobrazenie profilu sa musíte prihlásiť</string>
    
    <!-- Feed Fragment -->
    <string name="feed_title">Zoznam</string>
    <string name="feed_subtitle">Aktuálne ponuky</string>
    <string name="feed_item_image">Obrázok položky</string>
    
    <!-- Map Fragment -->
    <string name="map_title">Mapa používateľov</string>
    
    <!-- Navigation -->
    <string name="nav_map">Mapa</string>
    <string name="nav_list">Zoznam</string>
    <string name="nav_profile">Profil</string>
    
    <!-- Change Password Fragment -->
    <string name="change_password_title">Zmena hesla</string>
    <string name="change_password_link">Zmena/obnova hesla</string>
    <string name="hint_old_password">Staré heslo</string>
    <string name="hint_new_password">Nové heslo</string>
    <string name="btn_change_password">Zmeň heslo</string>
    <string name="forgot_password_small">Zabudol som heslo</string>
    <string name="toast_enter_old_password">Zadajte staré heslo</string>
    <string name="toast_enter_new_password">Zadajte nové heslo</string>
    <string name="password_change_success">Heslo bolo úspešne zmenené</string>
    <string name="password_reset_email_sent">Email s odkazom na obnovenie hesla bol odoslaný</string>
    <string name="error_email_not_found">Email sa nenašiel</string>
    
    <!-- Location Sharing -->
    <string name="location_sharing_enabled">Zdieľanie polohy zapnuté</string>
    <string name="location_sharing_disabled">Zdieľanie polohy vypnuté</string>
    <string name="location_permission_denied">Pre zdieľanie polohy je potrebné povolenie</string>
    <string name="location_not_available">Poloha nie je dostupná</string>
    <string name="location_error">Chyba pri získavaní polohy</string>
    <string name="error_enable_geofence">Musíš si zapnúť geofence na videnie používateľov</string>
    <string name="label_location_coords">Súradnice polohy</string>
    <string name="label_radius">Polomer (m)</string>
    <string name="btn_update_range">Aktualizovať polomer</string>
    <string name="radius_updated">Polomer bol úspešne aktualizovaný</string>
    <string name="user_photo">Profilová fotka používateľa</string>
    <string name="upload_photo">Nahrať fotku</string>
    <string name="delete_photo">Odstrániť fotku</string>
    <string name="photo_uploaded">Fotka bola úspešne nahraná</string>
    <string name="photo_deleted">Fotka bola úspešne odstránená</string>
    <string name="photo_upload_failed">Nepodarilo sa nahrať fotku</string>
    <string name="photo_delete_failed">Nepodarilo sa odstrániť fotku</string>
    <string name="your_profile">Tvoj profil</string>
    <string name="user_profile">Profil používateľa</string>
    <string name="btn_show_map">Ukáž mapu</string>
    <string name="label_time_interval">Zdieľaj moju polohu v časoch:</string>
    <string name="label_time_from">od:</string>
    <string name="label_time_to">do:</string>
    <string name="label_last_seen">Naposledy videný:</string>
    
    <!-- Notifications -->
    <string name="notification_channel_name">MOBV Zadanie</string>
    <string name="notification_channel_description">Popis notifikacie</string>
    <string name="notification_permission_error">Chyba povolenie na notifikaciu</string>
    <string name="notification_user_count_change">Zmena počtu používateľov</string>
    <string name="notification_users_around_you">Používatelia okolo vás</string>
    <string name="notification_users_added">Pribudlo %1$d %2$s. Celkom okolo vás: %3$d</string>
    <string name="notification_users_removed">Ubudlo %1$d %2$s. Celkom okolo vás: %3$d</string>
    <string name="notification_users_count">Okolo vás je %1$d %2$s</string>
    <string name="user_singular">používateľ</string>
    <string name="user_plural_2_4">používatelia</string>
    <string name="user_plural_5_plus">používateľov</string>
    
    <!-- Profile Messages -->
    <string name="msg_enable_location_sharing_first">Najprv musíte zapnúť zdieľanie polohy</string>
    <string name="msg_auto_location_update_enabled">Automatická aktualizácia polohy zapnutá</string>
    <string name="msg_auto_location_update_disabled">Automatická aktualizácia polohy vypnutá</string>
    
    <!-- Location Sync -->
    <string name="location_sync_completed">Synchronizácia dokončená</string>
    <string name="location_sync_success">Dáta používateľov boli úspešne aktualizované</string>
</resources>